src/app/jb-foundation.css
/* ... */
#page {
  overflow: hidden;
  position: relative;
  max-width: 100%; }

main {
  padding-bottom: 2rem; }

h1 span {
  display: block;
  position: fixed;
  bottom: 110%; }

h1 img {
  display: block;
  margin: 0 auto;
  width: 220px; }
  @media (min-width: 620px) {
    h1 img {
      width: 240px; } }
  @media (min-width: 1000px) {
    h1 img {
      width: 280px; } }
  @media (min-width: 1200px) {
    h1 img {
      width: 320px; } }

.intro {
  text-align: center; }

.intro p {
  margin-left: auto;
  margin-right: auto; }

.home section:nth-child(even) {
  background-color: #f1f1f1; }

section .container > p:first-child {
  margin-top: 0; }

section .container > p:last-child {
  margin-bottom: 0; }

section.jb > p:first-child {
  max-width: 34em; }

.jerry-boy img.portrait {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 260px;
  border-radius: 50%;
  border: 0.5rem solid transparent; }
  @media (min-width: 620px) {
    .jerry-boy img.portrait {
      width: 300px; } }
  @media (min-width: 1000px) {
    .jerry-boy img.portrait {
      width: 380px; } }
  @media (min-width: 1200px) {
    .jerry-boy img.portrait {
      width: 460px; } }

.jerry-boy .photo .images:after {
  content: "";
  display: block;
  position: absolute;
  border: 0.6rem solid #ef163a;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 50%; }

.jerry-boy .photo .images {
  display: inline-block;
  position: relative; }

.jerry-boy .photo .twin-hearts {
  position: absolute;
  display: block;
  right: 5%;
  top: 5%;
  width: 90px; }

.jerry-boy .photo p {
  text-align: center;
  margin-top: 0.5rem;
  line-height: 1.2; }

.jerry-boy .photo p strong {
  font-family: "Eczar", serif;
  font-size: 1.953125rem;
  display: block;
  margin-bottom: 0; }

section.jb {
  text-align: center; }

section.jb p {
  margin-left: auto;
  margin-right: auto; }

.dinner-time {
  position: relative;
  border-radius: 6px;
  overflow: hidden; }

.dinner-time img {
  display: block; }

.dinner-time figcaption {
  font-family: "Eczar", serif;
  position: absolute;
  top: 0;
  left: 0;
  text-align: center;
  width: 100%;
  padding-top: 1rem;
  color: #fff;
  font-size: 1.25rem;
  letter-spacing: 0.0625em;
  z-index: 10; }
  @media (min-width: 620px) {
    .dinner-time figcaption {
      padding-top: 1rem;
      font-size: 1.953125rem; } }
  @media (min-width: 1000px) {
    .dinner-time figcaption {
      padding-top: 1.5rem;
      font-size: 2.44140625rem; } }

.dinner-time:before {
  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0, rgba(0, 0, 0, 0.5) 40%, transparent 100%);
  content: "";
  display: block;
  position: absolute;
  z-index: 5;
  width: 100%;
  left: 0;
  top: 0;
  height: 45%; }

.mission h2 {
  text-align: center; }

.mission h2 span {
  display: block;
  font-size: 0.8em; }
  @media (min-width: 1000px) {
    .mission h2 span {
      display: inline;
      font-size: 1em; } }

.mission .sub-section {
  margin-top: 1.5rem; }

.mission .sub-section h3 + p {
  margin-top: 0.125rem; }

.rescue-center h2 span {
  display: block;
  font-size: 0.8em; }

.directions a {
  text-decoration: underline; }

.contact .text p {
  margin-top: 0; }

.contact address {
  line-height: 1.2;
  margin-bottom: 0.25rem; }

.contact .map {
  margin-top: 1rem;
  max-width: 100%; }
  @media (min-width: 1000px) {
    .contact .map {
      margin-top: 0;
      flex-grow: 1; } }

@media (min-width: 1000px) {
  .contact .flex {
    display: flex;
    flex-wrap: nowrap; } }

.contact .text {
  white-space: nowrap; }
  @media (min-width: 1000px) {
    .contact .text {
      padding-right: 2rem; } }

.map-wrapper iframe {
  max-width: 100%; }

.site-info {
  background-color: #ddd;
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-size: 0.8rem;
  text-align: center;
  color: #5d5b77; }

@media (min-width: 1000px) {
  .site-info .content {
    display: flex;
    justify-content: space-between;
    align-items: center; } }

.site-info a span {
  font-size: 0; }

.site-info a {
  text-decoration: underline; }

.site-info div + div {
  margin-top: 0.5em; }
  @media (min-width: 1000px) {
    .site-info div + div {
      margin-top: 0; } }

section.thanks {
  text-align: center; }

section.thanks p {
  margin-left: auto;
  margin-right: auto; }

section.thanks .container:after {
  content: "";
  display: block;
  margin-left: auto;
  margin-right: auto;
  border: 0.25rem solid #ef163a;
  margin-top: 1rem;
  max-width: 320px; }

.stories img {
  display: block;
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.125); }

.stories ul {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  display: flex;
  flex-wrap: wrap; }

.stories ul li {
  padding: 0.5rem;
  width: 50%; }
  @media (min-width: 1000px) {
    .stories ul li {
      width: 33.3333333333%; } }

.animal-shelter-page .donate-now {
  text-align: center;
  background-color: #f0f0f0;
  padding: 1.25rem 1rem; }
  @media (min-width: 1000px) {
    .animal-shelter-page .donate-now {
      padding: 2rem 1rem; } }

.animal-shelter-page .donate-now a {
  display: inline-block;
  background-color: #ef163a;
  font-size: 1.5625rem;
  padding: 0 1.5em;
  color: #fff;
  font-weight: 700;
  line-height: 2em;
  border-radius: 1em;
  padding-top: 0.0125em; }

.animal-shelter-page .donate-now p {
  margin-left: auto;
  margin-right: auto;
  font-size: 1.25rem;
  margin-bottom: 0; }

.animal-shelter-page .upi-payments img {
  width: 300px; }

.animal-shelter-page .upi-payments ul {
  list-style-type: disc;
  color: #ef163a;
  margin-left: 1.125rem; }

.animal-shelter-page .upi-payments ul span {
  color: #302f3d; }

.animal-shelter-page .upi-payments ul li + li {
  margin-top: 0.5rem; }

@media (min-width: 1000px) {
  .donation-options {
    display: flex; } }

.donation-options > div + div {
  margin-top: 2rem; }
  @media (min-width: 1000px) {
    .donation-options > div + div {
      margin-left: 2rem;
      margin-top: 0; } }

.donation-options table {
  margin-top: 0.5rem; }
/* ... */

